// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple style factories createNumericStyler works with responsive value (with default responsive value) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
</DocumentFragment>
`;

exports[`simple style factories createNumericStyler works with responsive value (with default simple value) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-a34xuh {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 2px;
}

<div
    class="css-a34xuh"
  />
</DocumentFragment>
`;

exports[`simple style factories createNumericStyler works with responsive value (without default value) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;

exports[`simple style factories createNumericStyler works with simple value (with default value) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-a34xuh {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 2px;
}

<div
    class="css-a34xuh"
  />
</DocumentFragment>
`;

exports[`simple style factories createNumericStyler works with simple value (without default value) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;

exports[`simple style factories createStringStyler takes last value from responsive value if breakpoint exceeds the range (with default) 1`] = `
<DocumentFragment>
  .css-1k7vbhj {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test-left: 1px;
  test-right: 1px;
}

<div
    class="css-1k7vbhj"
  />
  .css-h64w4q {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test-left: 3px;
  test-right: 3px;
}

<div
    class="css-h64w4q"
  />
</DocumentFragment>
`;

exports[`simple style factories createStringStyler takes the value from default responsive value if is not specified in prop (with default) 1`] = `
<DocumentFragment>
  .css-bqqtey {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test-left: 2px;
  test-right: 2px;
}

<div
    class="css-bqqtey"
  />
  .css-bqqtey {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test-left: 2px;
  test-right: 2px;
}

<div
    class="css-bqqtey"
  />
</DocumentFragment>
`;

exports[`simple style factories createStringStyler works with responsive value (with default responsive value) 1`] = `
<DocumentFragment>
  .css-1k7vbhj {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test-left: 1px;
  test-right: 1px;
}

<div
    class="css-1k7vbhj"
  />
  .css-h64w4q {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test-left: 3px;
  test-right: 3px;
}

<div
    class="css-h64w4q"
  />
</DocumentFragment>
`;

exports[`simple style factories createStringStyler works with responsive value (with default simple value) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-a34xuh {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 2px;
}

<div
    class="css-a34xuh"
  />
</DocumentFragment>
`;

exports[`simple style factories createStringStyler works with responsive value (without default value) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;

exports[`simple style factories createStringStyler works with simple value (with default value) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-a34xuh {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 2px;
}

<div
    class="css-a34xuh"
  />
</DocumentFragment>
`;

exports[`simple style factories createStringStyler works with simple value (without default value) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;

exports[`simple style factories createStringStyler works with simple value of existing css property (without default value) 1`] = `
<DocumentFragment>
  .css-19jix90 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  font-weight: 600;
}

<div
    class="css-19jix90"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default responsive) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
</DocumentFragment>
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default responsive) 2`] = `
<DocumentFragment>
  .css-a34xuh {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 2px;
}

<div
    class="css-a34xuh"
  />
  .css-z4m3n4 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 3px;
}

<div
    class="css-z4m3n4"
  />
  .css-a34xuh {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 2px;
}

<div
    class="css-a34xuh"
  />
</DocumentFragment>
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default simple) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
</DocumentFragment>
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (with default simple) 2`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
</DocumentFragment>
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (without default) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;

exports[`simple style factories createStyler takes last value from responsive value if breakpoint exceeds the range (without default) 2`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-z4m3n4 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 3px;
}

<div
    class="css-z4m3n4"
  />
  .css-1iuax7x {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
}

<div
    class="css-1iuax7x"
  />
</DocumentFragment>
`;

exports[`simple style factories createStyler takes the value from default responsive value if is not specified in prop (with default) 1`] = `
<DocumentFragment>
  .css-1hrlp0i {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 1px;
}

<div
    class="css-1hrlp0i"
  />
  .css-a34xuh {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  test: 2px;
}

<div
    class="css-a34xuh"
  />
</DocumentFragment>
`;
